--- a/src/pages/Homepage.css
+++ b/src/pages/Homepage.css
@@ -1,12 +1,82 @@
-* body{
-    margin: 0;
-    padding: 0;
-}
+/* Type: CSS */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
+
+ 
 .home{
+ 
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     padding: 0 10%;
-    min-height: 100vh;
+    min-height: 90vh !important;
+    height: 90vh !important;
     flex-direction: column;
+    width: 98vh;
+    
 }
+.home2{
+     
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        padding: 0 10%;
+        min-height: 50vh !important;
+        height: 50vh!important;
+        flex-direction: column;
+        width: 45vw;
+        background-color: rgba(242,62,121,0.1);
+}
+
+h1{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 5vw;
+    color: rgb(148,63,20);
+    -webkit-text-stroke: 0.3vw white;
+    text-transform: uppercase;
+}
+ .home-text2{
+    position: relative;
+    
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 0 10%;
+    font-size: 1.6vw;
+    color: rgb(148,63,20);
+    
+    text-transform: uppercase;
+    
+ }
+ .order{
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 0 10%;
+    height: max-content;
+    background-color: aqua;
+    border: none;
+    min-width: max-content;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: .3s;
+    font-size: 1.2vw;
+    font-weight: bold;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+   
+ }
+.home-btn{
+    background-color: rgb(242,62,121);
+}
+ 
