--- a/src/pages/Signup.css
+++ b/src/pages/Signup.css
@@ -53,7 +53,7 @@
   border-radius: 10px;
     text-align: center;
   }
-  .footer{
+  .footer-login{
     display: flex;
   margin-top: 3vh;
     justify-content: space-between;
