--- a/src/components/Addtocart/CardDetailes.css
+++ b/src/components/Addtocart/CardDetailes.css
@@ -8,3 +8,22 @@
     /* -webkit-text-stroke: 0.3vw black; */
     transition: cubic-bezier(0.075, 0.82, 0.165, 1);
 }
+
+.container{
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color:rgba(41,53,49,0.9);
+    color: white;
+    font-size: 1.2rem;
+    height: 82vh!important;
+    font-weight: 500;
+    width: 100%;
+    border-radius: 10px;
+}
+.container:hover{
+    transform:translate(0px, -10px);
+    transition: 0.8s ease-in-out;
+}
